# python-rye-template

./: .dockerignore  .editorconfig  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  enhancement.md
.github/workflows/: ci.yaml
src/python_rye_template/: __init__.py
src/tests/: hello_test.py
