[project]
name = "python-rye-template"
version = "0.1.0"
description = "Template for Python projects using Rye"
authors = [
    { name = "MIZUNO Kosuke", email = "22116692+hanamizuno@users.noreply.github.com" },
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_rye_template"]
