[project]
name = "python-rye-template"
version = "0.1.0"
description = "Template for Python projects using Rye"
authors = [
  { name = "MIZUNO Kosuke", email = "22116692+hanamizuno@users.noreply.github.com" },
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "pyright>=1.1.370",
  "pytest>=8.2.2",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0",
]

[tool.rye.scripts]
"lint:ruff" = "ruff check ."
"lint:pyright" = "pyright"
lint = { chain = ["lint:ruff", "lint:pyright"] }
fix = "ruff check --fix ."
format = "ruff format ."
test = "pytest"
test_cov = "pytest --cov=app --cov-report=html --cov-report=term"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_rye_template"]

[tool.ruff]
line-length = 79
target-version = "py312"
# extend-exclude = ["hoge/"]

[tool.ruff.lint]
select = [
  # https://beta.ruff.rs/docs/rules/
  "E",
  "F",
  "W",
  "C90",
  "I",
  "N",
  "D",
  "UP",
  "B",
  "A",
  "COM",
  "C4",
  "EM",
  "FA",
  "ISC",
  "INP",
  "PIE",
  "PYI",
  "PT",
  "Q",
  "SLF",
  "SIM",
  "TCH",
  "PTH",
  "RUF",
  "ERA",
  "PGH",
  "PLR",
  "PLW",
]
ignore = ["COM812", "D203", "D213", "D415", "ISC001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
typeCheckingMode = "strict"
reportIncompatibleMethodOverride = false
reportMissingTypeStubs = false
reportUnknownArgumentType = true
reportUnknownMemberType = true
reportUnknownVariableType = true
pythonVersion = "3.12"
exclude = [".venv/**"]
